tests/baselines/reference/accessorsInAmbientContext.errors.txt
tests/cases/compiler/accessorsInAmbientContext.ts(3,13): error TS1086: An accessor cannot be declared in an ambient context.
tests/cases/compiler/accessorsInAmbientContext.ts(4,13): error TS1086: An accessor cannot be declared in an ambient context.
tests/cases/compiler/accessorsInAmbientContext.ts(6,20): error TS1086: An accessor cannot be declared in an ambient context.
tests/cases/compiler/accessorsInAmbientContext.ts(7,20): error TS1086: An accessor cannot be declared in an ambient context.
tests/cases/compiler/accessorsInAmbientContext.ts(12,9): error TS1086: An accessor cannot be declared in an ambient context.
tests/cases/compiler/accessorsInAmbientContext.ts(13,9): error TS1086: An accessor cannot be declared in an ambient context.
tests/cases/compiler/accessorsInAmbientContext.ts(15,16): error TS1086: An accessor cannot be declared in an ambient context.
tests/cases/compiler/accessorsInAmbientContext.ts(16,16): error TS1086: An accessor cannot be declared in an ambient context.


==== tests/cases/compiler/accessorsInAmbientContext.ts (8 errors) ====
    declare module M {
        class C {
            get X() { return 1; }
                ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
            set X(v) { }
                ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
    
            static get Y() { return 1; }
                       ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
            static set Y(v) { }
                       ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
        }
    }
    
    declare class C {
        get X() { return 1; }
            ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
        set X(v) { }
            ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
    
        static get Y() { return 1; }
                   ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
        static set Y(v) { }
                   ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
    }